[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = { version = "0.1.14", features = ["full"] }
radmin-router = { path = ".." }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "full"] }
